# hachi

./: .gitignore  CMakeLists.txt  common.cc  common.h  ipc_client.cc  ipc_client.h  ipc_server.cc  ipc_server.h  nlohmann_json.h
libuv/libs/win/x64/: libuv.lib  libuvd.lib
libuv/libs/win/x86/: libuv.lib  libuvd.lib
test/: test_echo_server.cc  test_ipc_client.cc  test_ipc_server.cc
